@@ -1,3 +1,12 @@
+2011-09-28  Ilya Tikhonovsky  <loislo@chromium.org>
+
+        Web Inspector: It'd be useful to have performance stats for the back-end to front-end communication channel.
+        https://bugs.webkit.org/show_bug.cgi?id=69002
+
+        Reviewed by Yury Semikhatsky.
+
+        * inspector/CodeGeneratorInspector.pm:
+
 2011-09-27  Pavel Podivilov  <podivilov@chromium.org>
 
         Web Inspector: live edit cursor always appears at the beginning of the file.
